# dewox

./: .gitignore  .sconsign.dblite  CHANGELOG  ChangeLog  INSTALL  INSTALL.zh  Makefile.in  README.md  README.zh.md  SConstruct  cjbs  config.status  configure  configure.ac  dide  makefile
autom4te.cache/: output.1  traces.0  traces.1
src/: .sconsign.dblite  Backend.cc  Backend.h  Makefile.am  Makefile.in  SConscript  SConstruct  backend.c  backend.h  build  common.h  config.h  config.h.in  dewox.c  event.c  event.h  font.c  font.h  main.c  main.cc  makefile  menu.c  operator.c  pageconfig.c  pageconfig.h  pagefile.c  pagefile.h  pager.c  pager.h  prop.c  stacking.c  stacking.h  video.c  video.h  widget.c  widget.h  window.c
src/.deps/: font.Po  main.Po  pagefile.Po  pager.Po  video.Po  widget.Po
src/Dewox/: App.cc  App.h  Backend.cc  Backend.h  Dewox.cc
src/UI/: ColorManager.cc  ColorManager.h  EventManager.cc  EventManager.h  RGB.cc  RGB.h  UI.cc  UI.h  makefile
src/Util/: List.h  Log.h  makefile
src/dshared/: config.h  dshared.h  generate_header_template  generate_source_template
src/dstudio/: SConscript  config.h  dstudio.c  generate_header_template  main.c  wm.c  wm.h
src/dui/: SConscript  config.h  event.c  font.c  window.c  window.h
src/dutil/: SConscript  config.h  dutil.c  dutil.h
src/info/: info.c
src/pref/: pref.c  pref.h
src/scene/: pagescene.c  pagescene.h
src/track/: pagetrack.c  pagetrack.h  track.h
src/ui/: backend.c  dewox  makefile  ui.c  ui.h
src/uitest/: uitest.c
src/util/: list.c  list.h  makefile  util.h
(+87 files in other folders)
